Fixed repair guide spacings

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 body {
   font-family: sans-serif;
   background: #d8e9d8;           
-  color: #000000;                
+  color: #fff;                
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -53,7 +53,7 @@ button.btn {
   display: block;
   width: 100%;
   padding: 0.75rem 1rem;
-  background: #5f8df1; /* Slightly darker shade of #d8e9d8 */
+  background: #619cf5; /* Slightly darker shade of #d8e9d8 */
   color: #000;
   text-decoration: none;
   text-align: center;
@@ -68,7 +68,7 @@ button.btn:hover {
 a.back-btn {
   display: inline-block;
   margin: 1rem;
-  color: #b0d1b0; /* Slightly darker shade of #d8e9d8 */
+  color: #000000; /* Slightly darker shade of #d8e9d8 */
   text-decoration: none;
 }
 a.back-btn:hover {
